add contact section

--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
-                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                     <div class="grid grid-cols-2 md:gap-5 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
@@ -297,9 +297,9 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
-                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                     <div class="grid grid-cols-2 md:gap-5 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
@@ -317,9 +317,9 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
-                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                     <div class="grid grid-cols-2 md:gap-5 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
@@ -329,7 +329,7 @@
                      </div>
                   </div>
                </div>
-               <h3 class="capitalized text-base font-normal py-2 px-1">Interior Furniture web Vue</h3>
+               <h3 class="capitalized text-base font-normal py-2 px-1">Interior Furniture web Vue by BWA</h3>
             </div>
             <!-- End Interior Furniture WEbsite -->
 
@@ -337,9 +337,9 @@
             <div class="portfolio">
                <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
                   <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
-                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-1 items-center justify-center">
+                  <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
-                     <div class="grid grid-cols-2 md:gap-4 gap-3">
+                     <div class="grid grid-cols-2 md:gap-5 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
@@ -358,18 +358,45 @@
       <!-- end Portfolio -->
 
       <!-- Contact -->
-      <section class="section h-screen translate-y-0 scale-100" id="contact">
+      <section class="section h-screen translate-y-0 scale-100 px-[5%] md:px-[8%]" id="contact">
+
+         <!-- title -->
          <div class="title py-4 mb-8">
             <h2 class="text-content text-4xl md:text-6xl">Contact <span class="text-neon-blue">Me</span>
                <span class="text-bg text-5xl md:text-8xl">Below</span>
             </h2>
          </div>
+         <!-- end title -->
+         
+         <!-- contact main content -->
+         <div class="flex flex-col md:flex-row md:py-12 md:gap-12 gap-2">
+
+            <!-- contact left side -->
+            <div class="left-side flex flex-col flex-1">
+               <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">contact</h2>
+               <p class="text-sm md:text-base text-gray-400 text-justify md:leading-loose mb-4">
+                  You can take closer with me, text me if you want to me to collab about project or something.
+               </p>
+            </div>
+            <!-- end contact left side -->
+
+            <!-- contact right side -->
+            <div class="left-side flex flex-col flex-[1.5]">
+               <h2 class="font-bold md:text-xl capitalize text-slate-50 mb-3">contact me Here</h2>
+               <p class="text-sm md:text-base text-gray-400 text-justify md:leading-loose mb-4">
+                  You can take closer with me, text me if you want to me to collab about project or something.
+               </p>
+            </div>
+            <!-- end contact right side -->
+
+         </div>
+         <!-- end contact main content -->
       </section>
       <!-- End Contact -->
    </main>
 
 <!-- Navigation Controls -->
-   <div class="fixed inset-x-0 bottom-7 md:inset-y-0 md:right-5 flex justify-center md:items-end flex-row md:flex-col gap-4" id="control">
+   <div class="fixed inset-x-0 bottom-7 flex justify-center flex-row gap-4 md:inset-y-0 md:flex-col md:left-[94%] md:items-start md:h-screen md:w-[6%]" id="control">
       <div class="rounded-[50%] w-12 h-12 bg-slate-900 neuro-effect flex justify-center items-center cursor-pointer active-btn" data-id="home">
          <i class="text-gray-300 fas fa-home"></i>
       </div>
