modify:contact section 1

--- a/index.html
+++ b/index.html
@@ -380,15 +380,15 @@
                <!-- contact-icon -->
                <div class="grid grid-flow-row gap-8">
                   <div class="contact-icon text-center p-5 border-[1px] border-solid border-gray-700 rounded-lg transition-all duration-[.2s] ease-in-out hover:-translate-y-1 hover:border-0 hover:bg-slate-800">
-                     <i class="fa-solid fa-location-dot">icon</i>
+                     <i class="w-[30px] h-[30px] mb-2 fa-solid fa-location-dot">icon</i>
                      <p class="text-sm capitalize">Depok, West Java - Indonesia</p>
                   </div>
                   <div class="contact-icon text-center p-5 border-[1px] border-solid border-gray-700 rounded-lg transition-all duration-[.2s] ease-in-out hover:-translate-y-1 hover:border-0 hover:bg-slate-800">
-                     <i class="fa-solid fa-envelope">icon</i>
+                     <i class="w-[30px] h-[30px] mb-2 fa-solid fa-envelope">icon</i>
                      <p class="text-sm">ardiansyahirwan923@gmail.com</p>
                   </div>
                   <div class="contact-icon text-center p-5 border-[1px] border-solid border-gray-700 rounded-lg transition-all duration-[.2s] ease-in-out hover:-translate-y-1 hover:border-0 hover:bg-slate-800">
-                     <i class="fa-brands fa-github">icon</i>
+                     <i class="w-[30px] h-[30px] mb-2 fa-brands fa-github">icon</i>
                      <p class="text-sm">ardiansyahirwan</p>
                   </div>
                </div>
@@ -399,7 +399,7 @@
             <!-- contact right side -->
             <div class="left-side flex flex-col flex-[1.5]">
               <!-- form -->
-               <form action="#" method="post" class="grid grid-flow-row md:grid-cols-2 gap-8 p-5 md:p-8 bg-slate-800 rounded-lg">
+               <form action="#" method="post" class="grid grid-flow-row md:grid-cols-2 gap-8 p-5 md:p-8 border-[1px] border-gray-700 rounded-lg">
                   <div class="input-group">
                      <div class="input-form flex flex-col mb-4">
                         <label for="name" class="capitalize text-[13px] mb-2">your name</label>
