finishing before dark mode

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>My Portfolio</title>
+   <title>Irwan Ardiansyah Portfolio's</title>
    <!-- Montserrat Fonts -->
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,10 +38,14 @@
             </p>
             <div class="flex justify-start pt-2 gap-4 md:gap-6">
                <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">
-                  Download CV <i class="fa-solid fa-arrow-down ml-2"></i>
+                  <a href="https://drive.google.com/file/d/11Y7ErmLFigGI3yA-QQ32njyibv-OGhtn/view?usp=sharing" target="_blank" download>
+                     Download CV <i class="fa-solid fa-arrow-down ml-2"></i>
+                  </a>
                </button>
                <button class="neuro-effect px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal md:font-medium text-xs md:text-base">
-                  Hire me <i class="fa-solid fa-paper-plane ml-2"></i>
+                  <a href="mailto:ardiansyahirwan923@gmail.com" target="_blank">
+                     Hire me <i class="fa-solid fa-paper-plane ml-2"></i>
+                  </a>
                </button>
             </div>
          </div>
@@ -70,15 +74,15 @@
                </p>
 
                <div class="social-media grid grid-rows-3 gap-2 text-slate-50 font-semibold text-base">
-                  <a href="https://github.com/ardiansyahirwan" class="flex items-center gap-3 cursor-pointer">
+                  <a target="_blank" href="https://github.com/ardiansyahirwan" class="flex items-center gap-3 cursor-pointer">
                      <i class="fa-brands fa-github"></i>
                      <p>github.com/ardiansyahirwan</p>
                   </a>
-                  <a href="https://instagram.com/ir_w_an" class="flex items-center gap-3 cursor-pointer">
+                  <a target="_blank" href="https://instagram.com/ir_w_an" class="flex items-center gap-3 cursor-pointer">
                      <i class="fa-brands fa-instagram"></i>
                      <p>@ir_w_an</p>
                   </a>
-                  <a href="#" class="flex items-center gap-3 cursor-pointer">
+                  <a target="_blank" href="mailto:ardiansyahirwan923@gmail.com" class="flex items-center gap-3 cursor-pointer">
                      <i class="fa-brands fa-google"></i>
                      <p>ardiansyahirwan923@gmail.com</p>
                   </a>
@@ -275,15 +279,15 @@
          <div class="portfolio-section grid grid-flow-row md:grid-cols-3 gap-x-12 gap-y-6">
             <!-- UI POrtfolio -->
             <div class="portfolio">
-               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
-                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+               <div class="w-full h-64 relative z-0">
+                  <img src="./src/images/uix.png" alt="images" class="w-full h-full object-cover rounded-2xl absolute z-0">
                   <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-5 gap-3">
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
-                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                        <a href="https://buildwithangga.com/showcase/ardiansyahirwan923/website-pemesanan-event" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
                      </div>
@@ -295,12 +299,12 @@
 
             <!-- Web Wedding Organizer -->
             <div class="portfolio">
-               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
-                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+               <div class="w-full h-64 relative z-0">
+                  <img src="./src/images/web-nikah.png" alt="images" class="w-full h-full object-cover rounded-2xl absolute z-0">
                   <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-5 gap-3">
-                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                        <a href="https://github.com/ardiansyahirwan/fadilla-decor-with-vue-3" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
@@ -315,12 +319,12 @@
 
             <!-- Interior Furniture WEbsite -->
             <div class="portfolio">
-               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
-                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+               <div class="w-full h-64 relative z-0">
+                  <img src="./src/images/furniture.png" alt="images" class="w-full h-full object-cover rounded-2xl absolute z-0">
                   <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-5 gap-3">
-                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                        <a href="https://github.com/ardiansyahirwan/website-furniture-vite-tailwind" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
                         <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
@@ -335,15 +339,15 @@
 
             <!-- SI RT Slicing HTML -->
             <div class="portfolio">
-               <div class="bg-neon-blue w-full h-64 rounded-2xl relative z-0">
-                  <!-- <img src="#" alt="images" class="w-full h-full object-cover"> -->
+               <div class="w-full h-64 relative z-0">
+                  <img src="./src/images/sirt.png" alt="images" class="w-full h-full object-cover rounded-2xl absolute z-0">
                   <div class="portfolio-layer opacity-0 hover:opacity-100 flex flex-col gap-2 md:gap-3 items-center justify-center">
                      <p class="text-lg md:text-xl font-bold">Project Source</p>
                      <div class="grid grid-cols-2 md:gap-5 gap-3">
-                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                        <a href="https://github.com/ardiansyahirwan/sirt" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-brands fa-github w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
-                        <a href="#" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
+                        <a href="https://ardiansyahirwan.github.io/sirt" target="_blank" class="rounded-full w-10 h-10 md:w-11 md:h-11 flex justify-center items-center bg-neon-blue/70 hover:bg-gray-50 hover:text-slate-900">
                            <i class="fa-solid fa-link w-6 h-6 md:w-7 md:h-7"></i>
                         </a>
                      </div>
@@ -384,12 +388,16 @@
                      <p class="text-sm capitalize">Depok, West Java - Indonesia</p>
                   </div>
                   <div class="contact-icon text-center p-5 border-[1px] border-solid border-gray-700 rounded-lg transition-all duration-[.2s] ease-in-out hover:-translate-y-1 hover:border-0 hover:bg-slate-800">
-                     <i class="w-[30px] h-[30px] mb-2 fa-solid fa-envelope">icon</i>
-                     <p class="text-sm">ardiansyahirwan923@gmail.com</p>
+                     <a href="mailto:ardiansyahirwan923@gmail.com" target="_blank">
+                        <i class="w-[30px] h-[30px] mb-2 fa-solid fa-envelope">icon</i>
+                        <p class="text-sm">ardiansyahirwan923@gmail.com</p>
+                     </a>
                   </div>
                   <div class="contact-icon text-center p-5 border-[1px] border-solid border-gray-700 rounded-lg transition-all duration-[.2s] ease-in-out hover:-translate-y-1 hover:border-0 hover:bg-slate-800">
-                     <i class="w-[30px] h-[30px] mb-2 fa-brands fa-github">icon</i>
+                     <a href="https://github.com/ardiansyahirwan" target="_blank">
+                        <i class="w-[30px] h-[30px] mb-2 fa-brands fa-github">icon</i>
                      <p class="text-sm">ardiansyahirwan</p>
+                     </a>
                   </div>
                </div>
                <!-- end contact-icon -->
@@ -397,7 +405,7 @@
             <!-- end contact left side -->
 
             <!-- contact right side -->
-            <div class="left-side flex flex-col flex-[1.5]">
+            <div class="right-side flex flex-col flex-[1.5]">
               <!-- form -->
                <form action="#" method="post" class="grid grid-flow-row md:grid-cols-2 gap-8 p-5 md:p-8 border-[1px] border-gray-700 rounded-lg">
                   <div class="input-group">
@@ -418,6 +426,9 @@
                      <label for="message" class="capitalize text-[13px] mb-2">your message</label>
                      <textarea name="message" cols="30" rows="15" class="text-sm bg-slate-700 rounded-lg p-3 border-2 border-slate-800 hover:border-neon-blue/60 focus:bg-slate-800" placeholder="message"></textarea>
                   </div>
+                  <button class="px-3 py-2 md:px-5 md:py-3 rounded-md text-slate-300 font-normal border-2 border-gray-600 md:font-medium text-xs md:text-base">
+                     Submit
+                  </button>
                </form>
               <!-- end form -->
             </div>
